fixed book now page overlap with header

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,7 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   font-weight: 400;
   line-height: 1.5;
   font-size: 16px;
@@ -34,7 +34,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 500;
   margin: 5px 0;
   line-height: 1.25;
@@ -84,7 +84,7 @@ a:hover {
   top: 0;
   width: 100%;
   height: 20vh; /* Full screen height */
-  background-image: url('./assets/images/Logo2.JPG'); /* Set your background image path */
+  background-image: url("./assets/images/Logo2.JPG"); /* Set your background image path */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -172,11 +172,12 @@ img {
   max-width: 100%;
 }
 
-span[role='img'] {
+span[role="img"] {
   cursor: default;
 }
 
 form {
+  margin-top: 22vh;
   width: 40%;
 }
 
@@ -199,7 +200,7 @@ input:focus {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 25vh;
+  margin-top: 22vh;
 }
 
 .flex-row {
